--- a/jmvpapi/.env
+++ b/jmvpapi/.env
@@ -1,7 +1,7 @@
 DB_HOST=194.61.28.54
 DB_PORT=5434
 DB_USERNAME=jose
-DB_NAME=Incidencias
+DB_NAME=jmvpIncidencias
 DB_PASSWORD=pswIncidencias
 
 PORT=3000
